------------------------------------------------------------------------
r2127 | gaser | 2022-11-07 22:48:21

Changed paths:
 M CHANGES.txt
 M doc/cat.html


Added: Added css style file for entry page.
------------------------------------------------------------------------
r2126 | gaser | 2022-11-07 22:44:23

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M cat12.m
 M cat_install_tfce.m
 M cat_update.m
 M doc/cat.html
AM doc/cat.txt
 M doc/css/main.css
 M doc/index.html
 M spm_cat12.m


Changed: Many changes to implement the new html help.
Changed: Updated Makefile to consider new html help.
Changed: Updated and moved cat.txt from html to doc folder.
Added:   Added css style file for entry page.
------------------------------------------------------------------------
r2125 | gaser | 2022-10-26 13:45:37

Changed paths:
 M CHANGES.txt
 M cat_batch_bids.sh
 M cat_plot_histogram.m


Changed: Included some of Jussi Tohkas modifications into cat_batch_bids.sh.
Fixed:   Reading of Freesurfer and gifti data in cat_plot_histogram was 
         erronous.
------------------------------------------------------------------------
r2124 | gaser | 2022-10-24 11:52:19

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_conf_tools.m
 M cat_progress_bar.m
 M cat_stat_homogeneity.m
 M doc/index.html
 M update_revision.sh


Changed: Renamed the multiple tools to check homogeneity.
Changed: Added description of output to cat_stat_homogeneity.m.
Changed: Updated html doc.
Fixed:   Added try command to waitbar-call in cat_progress_bar to prevent errors
         if progress window was closed.


------------------------------------------------------------------------
r2123 | rdahnke | 2022-10-20 10:53:46

Changed paths:
 M CHANGES.txt
 M cat_batch_long.m
 M cat_batch_long.sh
 M cat_conf_long.m


Fixed:  Corrected handling of printlong variable in long shell batch.
------------------------------------------------------------------------
r2122 | gaser | 2022-10-18 17:26:11
