@@ -1,0 +1,282 @@
+img {
+  border: 0;
+}
+
+body {
+/*  font: 13px 'Lucida Grande', Verdana, Arial, Sans-Serif; */
+  font: small 'Lucida Grande', Verdana, Arial, Sans-Serif;
+  /* we need to set the pixel size for different MATLAB versions */
+   /* font: 100% 'Lucida Grande', Verdana, Arial, Sans-Serif; /* Resets 1em to 10px 'Lucida Grande', Verdana, Arial, Sans-Serif;  */ 
+  color: #444;
+  width: 100%;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  background: #F5F5F5;
+}
+
+/* --- Header */
+#header {
+  background: black url('images/home.jpg') right;
+  background-repeat: no-repeat;
+  width: 100%;
+  position: relative;
+  height: 115px; /* in MATLAB 2016a high without padding */
+  padding: 85px 0px 0px 0px;
+  margin: 0px 0px 0px 0px; 
+}
+
+#header h1, #header h1 a, #header h1 a:hover, #header h1 a:visited { /* H1 is the title in the header */
+  text-align: left;
+  font-size: 1.5em; 
+  font-weight: bold;
+  letter-spacing: -1px;
+  margin:  0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  color: white;
+}
+
+#header p, #header p a, #header p a:hover, #header p a:visited { /* H1 is the title in the header */
+  text-decoration: none;
+  color: white;
+  font-weight: normal;
+  margin:  0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  font-size: 0.9em;
+}
+#header h1, #header p {
+  padding-left: 20px; 
+}
+
+#button {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  border: solid 1px #000000;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: #AADDEE;
+  margin-top: 20px; 
+  padding: 0 10 0 10px;
+  text-decoration: none;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+#button a {
+  color: #003344;
+  font-weight: bold;
+  text-decoration: none;
+}
+#button a:hover {
+  background: #AADDEE;
+  color: #FF0000;
+  text-decoration: none;
+}
+
+#breadcrumbs { 
+  width: 90%;
+  color: #FFFFFF;
+  margin: 35px 0px 0px 20px;
+  padding: 0px 0px 0px 0px;
+}
+  
+#breadcrumbs a, #breadcrumbs a:hover, #breadcrumbs a:visited {
+  padding: 0px 0px 5px 0px;
+  color: #FFFFFF;
+  text-decoration: none;
+
+}
+  
+#breadcrumbs a:hover {
+  padding: 0px 0px 5px 0px;
+  text-decoration: none;
+  background: #F5F5F5;
+  color: #000000;
+
+}
+  
+/* --- Footer --- */ 
+#footer {
+  height: 30px;
+  width: 100%;
+  border-top: medium;
+  border-top-style: solid;
+  border-top-color: #000000;
+  border-top-width: 1px;
+  font-size:0.85em;
+  font-weight: normal;
+}
+#footer p {
+  margin: 10px;
+}
+
+/* Content */
+#content {
+  padding: 5px 20px 20px 20px;
+  font-size: 100%;
+}
+
+#center {
+  text-align: center;
+  width: 95%;
+  position: relative;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+  
+#content p {
+  text-align:justify;
+}
+
+
+/*- Headings */
+h1, h2, h3, h4, h5 {
+  color: #222;
+  font-family: 'Trebuchet MS', Verdana, Sans-Serif;
+}
+  
+h2 {
+  color: #444;
+  margin-top: 2.5em;
+  font-size: 1.3em;
+}
+
+h3 {
+  color: #555;
+  margin-top: 2.5em;
+  border-bottom: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #666;
+  font-size: 1.2em;
+}
+
+h4 {
+  color: #444;
+  margin-top: 2.0em;
+  font-size:  1.1em;
+}
+
+h5 {
+  color: #444;
+  margin-top: 1.5em;
+  margin-bottom: 0em;
+  font-size: 1.0em;
+}
+  
+li h4, li h5 {
+  margin-top: 0em;
+  margin-bottom: 0em;
+} 
+
+li p {
+  margin-top: 0em;
+  margin-bottom: 0.5em;
+}
+  
+a {
+  font-weight: 500;
+  text-decoration: none;
+  color:#133fbb;
+}
+
+a:hover {
+  background:#133f7a;
+  color: #FFFFFF;
+}
+
+a.function {
+  color: #008800; 
+}
+
+a.function:hover {
+  background:#00BB00;
+  color: #FFFFFF; 
+}
+
+li {
+  margin-bottom: 0.2em;
+}
+
+table {
+  /*
+  background-color: #ffeda0;
+  */
+  font: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+  font-size: 0.9em; 
+  border-collapse: collapse;
+  border: none;
+}
+
+table ul {
+	margin-left: -20px; 
+	padding-left: -20px;	
+}
+
+thead {
+  background-color: #f3c600;
+  /*
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+  */
+}
+
+tfood {
+  background-color: #F7F1D4;
+  font-size: 80%;
+  border-top: 1px solid #999;
+}
+td, th {
+  text-align: left; 
+  padding: 0.2em 1em;
+}
+
+em, tt, strong {
+  font-style: italic;
+  font-weight: bold;
+/*  font-weight: 500;
+  color: #886666; 
+*/
+}
+
+img.center {
+  text-align: center;
+  width: 95%;
+  position: relative;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p.img {
+  text-align: center;
+  width: 90%;
+  font-size: 0.9em; 
+  position: relative;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #666; 
+}
+
+p.code {
+  text-align: left;
+  width: 90%;
+  font-size: 0.9em; 
+  font: Monaco, Lucida Console, Courier, New Courier;
+  position: relative;
+  display: block;
+  margin-top: 10px;
+  margin-bottom: -10px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #222; 
+}
